--- a/Projekt.Rmd
+++ b/Projekt.Rmd
@@ -237,6 +237,11 @@ Dobiveni rezultati u skladu su s medicinskim spoznajama prema kojima povišena r
 
 Analiziramo interakcijski učinak hipertenzije i srčanih bolesti na BMI, zanima nas utječe li kombinacija hipertenzije i srčanih bolesti dodatno na BMI, više od svake bolesti pojedinačno. 
 
+Postavljamo hipoteze: 
+
+  H0: Ne postoji interakcijski učinak hipertenzije i srčanih bolesti na BMI
+  H1: Postoji interakcijski učinak hipertenzije i srčanih bolesti na BMI
+
 Koristit ćemo višestruku linearnu regresiju jer nam omogućuje istovremeno modeliranje hipertenzije i srčanih bolesti i njihove interakcije. Log-transformiramo BMI kako bi osigurali približnu normalnost reziduala, a grafičkim pregledom provjeravamo homogenost varijance.
 
 Kako bi procijenili interakcijski učinak napravit ćemo 2 modela jedan, jedan sa samo glavnim efektima i jedan koji ima i interakcijski član.
@@ -246,6 +251,24 @@ Kako bi procijenili interakcijski učinak napravit ćemo 2 modela jedan, jedan s
 #novi dataset sa samo nužnim vrijednostima
 
 data <- stroke_data[ , c("bmi" , "hypertension" , "heart_disease")]
+
+aggregate(
+  bmi ~ hypertension + heart_disease,
+  data = stroke_data,
+  mean
+)
+
+aggregate(
+  bmi ~ hypertension + heart_disease,
+  data = stroke_data,
+  median
+)
+
+aggregate(
+  bmi ~ hypertension + heart_disease,
+  data = stroke_data,
+  sd
+)
 
 model <- lm(log(bmi) ~ hypertension * heart_disease, data = data)
 
@@ -257,6 +280,9 @@ plot(fitted(model), residuals(model))
 abline(h = 0, col = "red")
 
 ```
+
+Deskriptivna analiza nam pokazuje razlike u prosječnim i medijanskim vrijednostima BMI-ja između skupina definiranih hipertenzijom i srčanim bolestima. Uočava se da kombinacija obje dijagnoze ne rezultira proporcionalno većim BMI-jem, što upućuje na mogući interakcijski učinak.
+
 ```{r}
 
 anova(model0, model)
@@ -271,6 +297,7 @@ Anova test nam govori da je interakcija statistički značajna.
 
 Hipertenzija i srčane bolesti imaju značajan učinak na BMI, a njihova interakcija je negativna. To znači da osoba koja ima i hipertenziju i srčane bolesti ima manji dodatni učinak na BMI. 
 
+Zaključno, analiza pokazuje da između hipertenzije i srčanih bolesti postoji statistički značajna interakcija u utjecaju na BMI. Ovaj rezultat naglašava važnost razmatranja zajedničkog djelovanja rizičnih čimbenika, umjesto njihove izolirane analize, pri interpretaciji zdravstvenih pokazatelja.
 
 ## 3. Pitanje: Koji čimbenici najbolje predviđaju nastanak moždanog udara kada razmatramo dob, razinu glukoze, BMI i hipertenziju?
 
